--- a/renderer/main.html
+++ b/renderer/main.html
@@ -1130,6 +1130,7 @@
           newWebview.style.cssText = "display:inline-flex; width:100%; height:100%";
           // 为不同账号创建独立的分区
           newWebview.partition = `persist:account_${event.data.accountId}`;
+          newWebview.setAttribute('data-account-id', event.data.accountId);
           newWebview.setAttribute("disablewebsecurity", "");
           newWebview.setAttribute("webpreferences", "javascript=yes, contextIsolation=yes");
           newWebview.setAttribute("allowpopups", "");
@@ -1455,6 +1456,14 @@
 
       function updateAuthorization() {
         console.log("开始更新授权...");
+        // 确保 currentPosition 已定义
+        let currentPosition;
+        if (typeof window.currentAccountPosition !== 'undefined') {
+          currentPosition = window.currentAccountPosition;
+        } else {
+          currentPosition = 0; // 设置默认值
+        }
+        console.log("当前账号位置:", currentPosition);
         showLoading();
         const webview = document.getElementById("browserView");
         const currentUrl = webview.getURL();
@@ -1481,6 +1490,7 @@
         // 获取当前账号信息，用于构建partition
         const accountId = window.currentAccountId || webview.getAttribute('data-account-id');
         const partition = accountId ? `persist:account_${accountId}` : null;
+        console.log("使用的partition:", partition, "accountId:", accountId);
         window.electronAPI
           .getCookies(domain, partition)
           .then((result) => {
