修改无法进入到百家号的问题

--- a/renderer/main.html
+++ b/renderer/main.html
@@ -1237,7 +1237,7 @@
         const accountId = window.currentAccountId || webview.getAttribute('data-account-id');
         const partition = accountId ? `persist:account_${accountId}` : null;
         if (
-          url.includes("baijiahao.baidu.com") &&
+          url.includes("baijiahao.baidu.com/builder/rc/home") &&
           a &&
           !a.flag
         ) {
