--- a/renderer/user-list.html
+++ b/renderer/user-list.html
@@ -560,7 +560,7 @@
                  <div class="search-container">
                      <div class="search-row">
                          <div class="search-item">
-                             <label for="khUsernameSearch">用户名：公司名称：</label>
+                             <label for="khUsernameSearch">用户名：</label>
                              <input type="text" id="khUsernameSearch" placeholder="请输入用户名" />
                          </div>
                          <div class="search-item">
