修复文心智能体反向登录的问题

--- a/renderer/hub.html
+++ b/renderer/hub.html
@@ -1174,6 +1174,7 @@
           url: "https://agents.baidu.com/center",
           acc_id: account.serverData ? account.serverData.acc_id : null,
           position: account.position,
+          send_id: account.serverData.send_id
         },
         "*"
       );
